add user timezone and address + Updated swagger
