# server/src/utils/response.js
@@ -4,7 +4,7 @@ const responseCodes = {
     UNAUTHORIZED: 401,
     NOT_FOUND: 404,
     INTERNAL_SERVER_ERROR: 500,
-    CREATED:201
+    CREATED: 201
 };
 
 const responseMessages = {
@@ -32,27 +32,28 @@ const responseMessages = {
     errorGettingTeamMembers: "Error Getting Team Members !",
     onlyOwnerGetTeam: "Only Owner can get members !",
     errorChagningCompanyStatus: "Error Changing Company Status",
-    companyChanged:"Company Changed !",
-    errorGettingUserCompanies:"Error Getting User Companies !",
-    errorCreatingFolder:"Error Creating Folder !",
-    folderCreatedSuccessfully:"Folder Created Successfully !",
-    unauthorizedAction:"Unauthorized !",
-    errorFetchingFolders:"Error Getting Folders !",
-    errorDeletingFolder:"Error Deleting Folder !",
-    errorUploadingDocument:"Error Uploading Document !",
-    multerError:"Something went wrong with the file upload.",
-    documentUploadedSuccessfully:"Document Uploaded to Server",
-    errorCreatingDocument:"Error Creating Document !",
-    docCreatedSuccessfully:"Document Created Successfully !",
-    errorGettingDocs:"Error Getting Documents !",
-    errorInFirstVisit:"Error Updating First Visit Status !",
-    userFound:"User Found Successfully !",
-    userNotFound:"User Not Found !",
-    docsNotfound:"Document Not Found !",
-    docsNotfound:"Documents Found !",
-    errorSendingContract:"Error Sending Contract !",
-    usereNameUpdatedSuccessfully:"Name Updated Successfully !",
-
+    companyChanged: "Company Changed !",
+    errorGettingUserCompanies: "Error Getting User Companies !",
+    errorCreatingFolder: "Error Creating Folder !",
+    folderCreatedSuccessfully: "Folder Created Successfully !",
+    unauthorizedAction: "Unauthorized !",
+    errorFetchingFolders: "Error Getting Folders !",
+    errorDeletingFolder: "Error Deleting Folder !",
+    errorUploadingDocument: "Error Uploading Document !",
+    multerError: "Something went wrong with the file upload.",
+    documentUploadedSuccessfully: "Document Uploaded to Server",
+    errorCreatingDocument: "Error Creating Document !",
+    docCreatedSuccessfully: "Document Created Successfully !",
+    errorGettingDocs: "Error Getting Documents !",
+    errorInFirstVisit: "Error Updating First Visit Status !",
+    userFound: "User Found Successfully !",
+    userNotFound: "User Not Found !",
+    docsNotfound: "Document Not Found !",
+    docsNotfound: "Documents Found !",
+    errorSendingContract: "Error Sending Contract !",
+    usereNameUpdatedSuccessfully: "Name Updated Successfully !",
+    errorAddingTimeNaddress: "Error Adding timezone !",
+    timeZoneSuccess:"Successfully Added Timezone !",
 
     errorRegister: "Error Registering User !",
     errorLogin: "Error Logging In User !",
